@@ -18,6 +18,8 @@ Version 1.5
   * Nemerle
   * F#
 
+- Enhancements to the Squid conf lexer (#664).
+
 - Fix Lua "class" highlighting: it does not have classes (#665).
 
 - Fix degenerate regex in Scala lexer (#671).
